<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chirps</string>
    <string name="all_chirps_section">All Chirps</string>
    <string name="my_profile_section">My Profile</string>
    <string name="my_chirps_section">My Chirps</string>
    <string name="my_favorites_section">My Favorites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_chirp_submission">Chirp Submission</string>
    <string name="username_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="name_input_hint">Name</string>
    <string name="login_activity_label">Login</string>
    <string name="email_input_hint">Email</string>
    <string name="reenter_password_input_hint">Re-enter password</string>
    <string name="first_name_input_hint">First name</string>
    <string name="last_name_input_hint">Last name</string>
    <string name="submit_chirp_button_label">Submit Chirp</string>
    <string name="chirp_title">Title</string>
    <string name="chirp_title_hint">Please give an appropriate title for your Chirp.</string>
    <string name="chirp_schools">Relevant Schools</string>
    <string name="chirp_schools_hint">Please select the schools relevant to this Chirp.</string>
    <string name="chirp_contact_info">Contact Info</string>
    <string name="chirp_contact_info_hint">Email to contact.</string>
    <string name="chirp_expires">Posted Until</string>
    <string name="chirp_expiration_date">Expiration Date (Optional)</string>
    <string name="chirp_expiration_date_hint">This chirp will disappear on this date.</string>
    <string name="chirp_expiration_time">Expiration Time (Optional)</string>
    <string name="chirp_expiration_time_hint">This chirp will disappear at this time.</string>
    <string name="chirp_description">Description</string>
    <string name="chirp_description_hint">Please give a brief description of the Chirp.</string>
    <string name="chirp_poster">Poster</string>
    <string name="log_out">Log out</string>
    <string name="add_chirp">Add</string>
    <string name="title_activity_chirp_details">Chirp Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_page">User Page</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="user_profile_name">Name</string>
    <string name="user_profile_school">School</string>
    <string name="user_profile">User Profile</string>
    <string name="school_pomona">Pomona</string>
    <string name="school_scripps">Scripps</string>
    <string name="school_harveymudd">Harvey Mudd</string>
    <string name="school_pitzer">Pitzer</string>
    <string name="school_claremontmckenna">Claremont McKenna</string>
    <string name="email_regex_harveymudd">\\w+((\\.\\w+)+)?@(g.)?hmc.edu</string>
    <string name="email_regex_pomona">\\w+((\\.\\w+)+)?@(mymail.)?pomona.edu</string>
    <string name="email_regex_pitzer">\\w+((\\.\\w+)+)?@(students.)?pitzer.edu</string>
    <string name="email_regex_claremontmckenna">\\w+((\\.\\w+)+)?@(students.claremontmckenna|cmc).edu</string>
    <string name="email_regex_scripps">\\w+((\\.\\w+)+)?@scrippscollege.edu</string>
    <string name="refresh_chirps">Refresh Chirps</string>
    <string name="post_until">Post Until</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="set_new_password">Set new password</string>
    <string name="unapproved_chirps">Unapproved Chirps</string>
    <string name="approved_chirps">Approved Chirps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_chirp">Delete</string>
    <string name="favorite_chirp">Favorite</string>
    <string name="chirp_categories">Categories</string>
    <string name="add_chirp_category">Set Categories</string>
    <string name="set_chirp_categories_title">Select Up To 3 Categories</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_categories_text">Click to select categories</string>
    <string-array name="categories_array">
        <item>Career</item>
        <item>Speaker</item>
        <item>Workshop</item>
        <item>Social</item>
        <item>Safety</item>
        <item>Buy/Sell</item>
    </string-array>
    <string name="title_activity_search">Search</string>
    <string name="app_label">Chirps</string>
    <string name="search_hint">Search chirps.</string>
    <string name="action_search">Search chirps.</string>
    <string name="chirp_user">User</string>
</resources>
