<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_add_chirp"
        android:title="@string/add_chirp"
        android:icon="@drawable/add_chirp"
        android:showAsAction="always" />
    <item android:id="@+id/action_refresh_chirps"
        android:title="@string/refresh_chirps"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_logout"
        android:title="@string/log_out"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
