<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/signup"
        tools:context="cs121.jam.chirps.SignUpActivity">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_2"/>

        <EditText
            android:id="@+id/sign_up_first_name_input"
            android:capitalize="words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/first_name_input_hint" />

        <EditText
            android:id="@+id/sign_up_last_name_input"
            android:capitalize="words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/last_name_input_hint" />

        <EditText
            android:id="@+id/sign_up_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email_input_hint" />

        <EditText
            android:id="@+id/sign_up_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/sign_up_reenter_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/reenter_password_input_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sign_up_button_label" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
